fix taskDetail page overflow on tablet and mobile screens

--- a/src/styles/TaskDetail.module.css
+++ b/src/styles/TaskDetail.module.css
@@ -141,7 +141,6 @@
 }
 
 .TaskRow {
-    width: 350px;
     display: flex;
     flex-wrap: wrap;
 }
